x2goclient (4.0.2.1-0x2go1) UNRELEASED; urgency=low

  [ Mike Gabriel ]
  * New upstream release (4.0.2.1):
    - Fix FTBFS on arm64 (and others) architecture. (Fixes: #498).
  * debian/control:
    + Add dbg:package x2goplugin-dbg.

  [ Oleksandr Shneyder ]
  * New upstream release (4.0.2.1):
    - Hide GSSAPI options on direct RDP connections.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 10 Apr 2014 18:30:25 +0200

x2goclient (4.0.2.0-0x2go1) unstable; urgency=low

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.2.0):
    - Revrite SSH Classes to support libssh fix.
    - Add Class HelpDialog to show options in scroll area. 
    - Fix authentication on SSH Broker with key + passphrase.
    - Set modmap timer timeout to 10 sec on Mac.
    - Fix running xmodmap if X2Go Client not started from terminal.
    - Setting keyboard modifiers with xmodmap.
    - Fix multimonitor support on Linux.
    - Display more version info. Parameters --version, --git, --changelog.
    - Don't show GUI dialog for --version, --help, etc, if started
      from terminal on linux and mac.
    - If no user in session config, display system username in pass form.
    - Check if txt/changelog and txt/git exist on config phase.
      Rename option "--git" to "--git-info".
    - Change x2goclient.nsi for nightly builds.

  [ Josh Lukens ]
  * New upstream version (4.0.2.0):
    - Switch to QNetworkAccessManager. Appropriately set content type
      header to "application/x-www-form-urlencoded" for HTTP post
      requests. (Fixes: #440, #138).
    - Fix copy+paste errors in QNetworkAccessManager code.
    - Provide support for dynamic authentication IDs. This is
      a requirement for using the broker client against brokers
      that use some sort of OTP authentication mechanism.
      (Fixes: #446).

  [ Mike Gabriel ]
  * New upstream version (4.0.2.0):
    - Drop create_text.sh again, implement changelog copying