@@ -9,6 +9,8 @@ x2goclient (4.0.2.1-0x2go1) UNRELEASED; urgency=low
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.2.1):
     - Hide GSSAPI options on direct RDP connections.
+    - Search X-Server in /Applications/Utilities/XQuartz.app on Mac.
+    - Wrong cmd line option throw error dialog if running not from terminal.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 10 Apr 2014 18:30:25 +0200
 
